<resources>
    <string name="app_name">Journal App</string>
    <string name="action_add_entry">New Entry</string>
    <string name="textview_title_label">Title</string>
    <string name="edit_text_title">Title</string>
    <string name="edit_text_body">Body</string>
    <string name="edittext_title">Title</string>
    <string name="edittext_body">Type your thoughts or feelings here</string>
    <string name="button_text">Save</string>
    <string name="button_text_update">Update</string>
    <string name="diary_entry_title">Title</string>
    <string name="date_text">Today\'s Date</string>
    <string name="action_go_to_date">Go to Date</string>
    <string name="no_diary_entries">You have not made any Entries Today!</string>
    <string name="button_add_entry">Add an Entry</string>
    <string name="intro">Welcome to the Journal App, where you can pen your thoughts and feelings! To get started, sign in below</string>
    <string name="title_text">My Journal App</string>


    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>


    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="last_modifiled">Last Modified: 1st June, 2018</string>
    <string name="action_go_to_month">Select Month</string>
    <string name="action_go_to_day">Select Day</string>
    <string name="action_view_all_entries">View all Entries</string>
    <string name="no_entries">No Entries Found</string>
    <string name="activity_title_entries_by_date">Entries By Date</string>
    <string name="activity_title_all_entries">All Entries</string>

    <string-array name="months">
        <item>All Months</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>


</resources>
