<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDiaryEntry">



    <EditText
        android:id="@+id/editTextTitle"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_title"
        android:layout_marginTop="16dip"
        android:layout_marginLeft="16dip"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"



        />

    <EditText
        android:id="@+id/editTextBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_body"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dip"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/editTextTitle"
        app:layout_constraintTop_toBottomOf="@id/editTextTitle"


        />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/button_text"
        android:layout_marginTop="8dip"
        app:layout_constraintLeft_toLeftOf="@+id/editTextBody"
        app:layout_constraintTop_toBottomOf="@id/editTextBody"


        />

</android.support.constraint.ConstraintLayout>