<?xml version="1.0" encoding="utf-8"?><!-- This linear layout contains a single item displayed in the MainActivity -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textViewEntryDate"
            tools:text="@string/date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:layout_margin="16dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:id="@+id/linearLayoutEditPanel"
            android:visibility="gone"
            tools:visibility="visible"

            >

            <ImageButton
                android:id="@+id/ImageButtonEdit"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@android:drawable/ic_menu_edit"
                android:layout_margin="5dp"
                />
            <ImageButton
                android:id="@+id/ImageButtonDelete"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@android:drawable/ic_menu_delete"
                android:layout_margin="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/textViewEntryTime"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_dark"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:textStyle="bold"
                tools:text="00:00" />
            <TextView
                android:id="@+id/textViewEntryTitle"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_light"
                tools:text="@string/diary_entry_title"
                android:textStyle="bold"
                />


        </LinearLayout>


        <TextView
            android:id="@+id/textViewEntryDescription"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#7c7c7c"
            android:layout_margin="8dp"
            tools:text="@string/diary_entry_title" />

        <TextView
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:id="@+id/textViewLastModified"
            tools:text="@string/last_modifiled"
            tools:visibility="visible"
            android:layout_gravity="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"

            />
    </LinearLayout>



</LinearLayout>


